<resources>
    <string name="app_name">Tech News</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_spam">Spam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="others">Others</string>
    <string name="login">Login</string>
    <string name="btnLogin">Login</string>
    <string name="tvRegister">Sign Up Now</string>
    <string name="regiter">Register</string>
    <string name="btnRegíter">Sign Up</string>
    <string name="action_list_view">List</string>
    <string name="action_grid_view">Grid</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Sign out</string>
    <string name="action_register">Sign up</string>
    <string name="offline_mode_title_setting">Offline mode</string>
    <string name="offline_mode_sumary_setting">Use without internet</string>
    <string name="category_titile_setting">General</string>
    <string name="search_title">searchView</string>
    <string name="search_hint">....</string>
    <string name="action_sign_in_facebook">Sign in with facebook</string>
    <string name="action_google_sign_in">Sign in with google</string>
    <string name="action_view_profile">Profile</string>
    <string name="action_manage">Manager</string>
    <string name="action_delete">Delete</string>
    <string name="filter_newest">Newest</string>
    <string name="filter_favorite">Favorite</string>
    <string name="filter_view">View</string>
    <string name="filter_new">New</string>
    <string name="action_ban">Ban</string>
    <string name="action_set_admin">Set as admin</string>
    <string-array name="listentries">
        <item>List item 1</item>
        <item>List item 2</item>
        <item>List item 3</item>
        <item>List item 4</item>
    </string-array>
    <string-array name="listvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
